src/objects/ffr__XXXCreditNoteLineItem__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__CreditNote__c</fullName>
        <label>Credit Note</label>
        <referenceTo>ffr__XXXCreditNote__c</referenceTo>
        <relationshipLabel>XXX Credit Note Line Items</relationshipLabel>
        <relationshipName>CreditNoteLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__NetValue__c</fullName>
        <formula>ffr__Quantity__c  *  ffr__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>XXX Credit Note Line Item</label>
    <nameField>
        <displayFormat>XCLI{000000}</displayFormat>
        <label>Credit Note Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Credit Note Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>